锁消除, 偏向锁