@@ -38,26 +38,27 @@ import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.State;
-import org.openjdk.jmh.annotations.Threads;
 import org.openjdk.jmh.annotations.Warmup;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
-import java.util.List;
 import java.util.concurrent.TimeUnit;
 
-@State(Scope.Thread)
-@OutputTimeUnit(TimeUnit.MICROSECONDS)
+@OutputTimeUnit(TimeUnit.NANOSECONDS)
 @Fork(1)
-@Threads(1)
-@BenchmarkMode(Mode.AverageTime)
 public class BiasedLock {
-    List<Integer> numberList = new MyList<>();
 
-    double x1 = Math.PI;
+    @State(Scope.Thread)
+    public static class SyncWrapper {
+        private SynchronizedSB thesb = new SynchronizedSB();
+    }
 
+    @State(Scope.Thread)
+    public static class UnsyncWrapper {
+        private OrgnSB thesb = new OrgnSB();
+    }
     /*
      * In addition to all the command line options usable at run time,
      * we have the annotations which can provide the reasonable defaults
@@ -72,33 +73,56 @@ public class BiasedLock {
      * etc.
      */
 
-    //@Benchmark
-    @Warmup(iterations = 5, time = 100, timeUnit = TimeUnit.MILLISECONDS)
-    @Measurement(iterations = 20, time = 300, timeUnit = TimeUnit.MILLISECONDS)
-    public void addValues() {
-        numberList.add(123);
-        numberList.clear();
-    }
-
-//        SynchronizedSB thesb = new SynchronizedSB();
-    OrgnSB thesb = new OrgnSB();
     @Benchmark
     @BenchmarkMode(Mode.AverageTime)
-    @Warmup     (iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
-    @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
+    @Warmup(iterations = 5, time = 1000, timeUnit = TimeUnit.MILLISECONDS)
+    @Measurement(iterations = 5, time = 1000, timeUnit = TimeUnit.MILLISECONDS)
     @Fork(jvmArgsAppend = {"-XX:+UseBiasedLocking",
             "-XX:BiasedLockingStartupDelay=0",
             "-server",
             "-XX:+EliminateLocks"})
-    public void stringBuilderTest() {
-//        SynchronizedSB thesb = this.thesb;
-        OrgnSB thesb = this.thesb;
-//        SynchronizedSB thesb = new SynchronizedSB();
-//    OrgnSB thesb = new OrgnSB();
-        for (int i = 0; i < 10000; i++) {
-            thesb.append("abc");
-            thesb.delete(0, thesb.length());
-        }
+    public void sycn_Biased_On(SyncWrapper wrapper) {
+        wrapper.thesb.append("abc");
+        wrapper.thesb.delete(0, wrapper.thesb.length());
+    }
+
+    @Benchmark
+    @BenchmarkMode(Mode.AverageTime)
+    @Warmup(iterations = 5, time = 1000, timeUnit = TimeUnit.MILLISECONDS)
+    @Measurement(iterations = 5, time = 1000, timeUnit = TimeUnit.MILLISECONDS)
+    @Fork(jvmArgsAppend = {"-XX:-UseBiasedLocking",
+            "-XX:BiasedLockingStartupDelay=0",
+            "-server",
+            "-XX:+EliminateLocks"})
+    public void sycn_Biased_Off(SyncWrapper wrapper) {
+        wrapper.thesb.append("abc");
+        wrapper.thesb.delete(0, wrapper.thesb.length());
+    }
+
+    @Benchmark
+    @BenchmarkMode(Mode.AverageTime)
+    @Warmup(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
+    @Measurement(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
+    @Fork(jvmArgsAppend = {"-XX:+UseBiasedLocking",
+            "-XX:BiasedLockingStartupDelay=0",
+            "-server",
+            "-XX:+EliminateLocks"})
+    public void unsycn_Biased_On(UnsyncWrapper wrapper) {
+        wrapper.thesb.append("abc");
+        wrapper.thesb.delete(0, wrapper.thesb.length());
+    }
+
+    @Benchmark
+    @BenchmarkMode(Mode.AverageTime)
+    @Warmup(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
+    @Measurement(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
+    @Fork(jvmArgsAppend = {"-XX:-UseBiasedLocking",
+            "-XX:BiasedLockingStartupDelay=0",
+            "-server",
+            "-XX:+EliminateLocks"})
+    public void unsycn_Biased_Off(UnsyncWrapper wrapper) {
+        wrapper.thesb.append("abc");
+        wrapper.thesb.delete(0, wrapper.thesb.length());
     }
 
     /*
